--- a/style.css
+++ b/style.css
@@ -418,7 +418,10 @@ body{
     width: 100%;
     border: none;
     border-bottom: 2px solid #ddd;
+    color: #444;
+    outline: none;
     padding: 1rem 0;
+    resize: none;
 }
 
 .form-container h2{
@@ -529,9 +532,9 @@ body{
 
     .logo{
         position: absolute;
-        top: 10px;
+        top: 3px;
         right: 15px;
-        font-size: 4.5rem;
+        font-size: 4.2rem;
     }
 
     .navbar-container input[type="checkbox"]:checked ~ .menu-items{
